--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" 
                 alt="A imagem representa o grupo musical O Mutantes. São três pessoas cantando em dois microfones." 
-                title="O Mutantes - CCO Domínio Público / Acervo Arquivo Nacional"
+                title="Os Mutantes - CCO Domínio Público / Acervo Arquivo Nacional"
                 class="img-fluid" class="img-inicio">
             </div>
         </section>
